# expdespy

./: .coverage  .gitignore  .pypirc   Dockerfile  README.md  classes_methods_map.txt  docker-compose.yml  main.py  map_class_metodos.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  setup_project.sh  test.sh
.github/workflows/: publish-testpypi.yml  python-app.yml  python-tests.yml  test.yml
examples/: ExpDesPy_Tutorial_Completo.ipynb  ExpDesPy_Tutorial_English_Complete.ipynb  expdespy_example.ipynb  expdezpy_example.ipynb
src/expdespy/datasets/: __init__.py  dbc_caprinos.py  dic_milho.py  dql_cana.py  fatorial_dbc_np.py  fatorial_dic_irrigacao.py  fatorial_dic_nitrogenio_fosforo.py  splitplot_dataset.py
src/expdespy/models/: __init__.py  base.py  dbc.py  dic.py  dql.py  fatorial_base.py  fatorial_dbc.py  fatorial_dic.py  splitplot_base.py  splitplot_dbc.py  splitplot_dic.py
src/expdespy/posthoc/: __init__.py  base.py  posthoc_loader.py  t_test.py  tukey_test.py
src/expdespy/regressao/: __init__.py  diagnostics.py  polynomial.py
src/expdespy/utils/: __init__.py  utils.py
tests/: test_base.py  test_dbc.py  test_dic.py  test_dql.py  test_fatorial_base.py  test_fatorial_dbc.py  test_fatorial_dic.py  test_fatorial_triplo.py  test_modelo_base.py  test_parcelas.py  test_parcelas_base.py  test_posthoc_loader.py  test_regressao_diagnostics.py  test_regressao_polynomial.py  test_t_posthoc.py  test_tukey_posthoc.py  test_util.py  teste_parcelas_base.py
