[project]
name = "expdespy"
version = "1.1.3"
description = "Pacote para análise de experimentos agrícolas (DIC, DBC, testes post hoc, gráficos, etc)"
authors = [
    { name="Cristiano Oliveira", email="cristiano2132.ufv@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "numpy>= 1.22.3",
    "pandas>=1.4",
    "scipy>=1.8,<1.14",          # até <1.14 para evitar incompatibilidade com statsmodels,
    "statsmodels>=0.14,<0.15",  # garante correção de _lazywhere
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "scikit-learn>=1.0"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "scikit-posthocs"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"