[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expdespy"
version = "0.1.1"
description = "Python package for experimental design analysis (ExpDes-like)"
authors = [{ name="Seu Nome", email="seu@email.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-posthocs",
    "matplotlib",
    "seaborn",
    "tabulate"
]

[tool.setuptools.packages.find]
where = ["src"]
