[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expdespy"
version = "1.6.0"
description = "Python package for experimental design analysis (ExpDes-like)"
authors = [{ name="Seu Nome", email="cristiano2132.ufv@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-posthocs",
    "matplotlib",
    "seaborn",
    "tabulate"
]

[tool.setuptools.packages.find]
where = ["src"]
